# react-python

./: .env.e2e  .env.integration  .env.local  .env.template  .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json
.husky/: pre-push
api/: database.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api/alembic/: env.py
api/alembic/versions/: bcc16697716d_create_task_table.py
api/config/: env.py  logging_config.py
api/middleware/: logging_middleware.py
api/models/: task.py
api/routers/: tasks.py
api/scripts/: export_openapi.py
api/services/: tasks.py
api/tests/: conftest.py  test_tasks_api.py
client/: .prettierignore  eslint.config.mts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  httpClient.ts  index.tsx  router.tsx
client/src/components/: ErrorBoundary.tsx
client/src/pages/Dashboard/: Dashboard.tsx
client/src/pages/Dashboard/components/: TaskForm.tsx  TaskList.tsx  index.ts
client/src/types/: index.ts  openapi.json
e2e/: config.ts  package-lock.json  package.json
e2e/tests/: app-flow.spec.ts
